// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BrNodeContainer > render > should render a container based on the type 1`] = `
"<br-meta-stub>
  <br-container-box-stub component=\\"[object Object]\\" page=\\"[object Object]\\">
    <div></div>
  </br-container-box-stub>
</br-meta-stub>"
`;

exports[`BrNodeContainer > render > should render a container based on the type 2`] = `
"<br-meta-stub>
  <br-container-inline-stub component=\\"[object Object]\\" page=\\"[object Object]\\">
    <div></div>
  </br-container-inline-stub>
</br-meta-stub>"
`;

exports[`BrNodeContainer > render > should render a container based on the type 3`] = `
"<br-meta-stub>
  <br-container-no-markup-stub component=\\"[object Object]\\" page=\\"[object Object]\\">
    <div></div>
  </br-container-no-markup-stub>
</br-meta-stub>"
`;

exports[`BrNodeContainer > render > should render a container based on the type 4`] = `
"<br-meta-stub>
  <br-container-ordered-list-stub component=\\"[object Object]\\" page=\\"[object Object]\\">
    <div></div>
  </br-container-ordered-list-stub>
</br-meta-stub>"
`;

exports[`BrNodeContainer > render > should render a container based on the type 5`] = `
"<br-meta-stub>
  <br-container-unordered-list-stub component=\\"[object Object]\\" page=\\"[object Object]\\">
    <div></div>
  </br-container-unordered-list-stub>
</br-meta-stub>"
`;

exports[`BrNodeContainer > render > should render a mapped container 1`] = `
"<br-meta-stub>
  <some-container-stub component=\\"[object Object]\\" page=\\"[object Object]\\">
    <div></div>
  </some-container-stub>
</br-meta-stub>"
`;
